fixed: fixed section grp

--- a/method-grp_sat.html
+++ b/method-grp_sat.html
@@ -50,7 +50,7 @@
                   >Мониторинг СЭТ на малых площадях</a
                 >
                 <a href="method-nat.html" class="dropdown__link"
-                  >Мониторинг естественной трещиноватости</a
+                  >Мониторинг заводнения</a
                 >
                 <a href="method-svan.html" class="dropdown__link"
                   >Мониторинг СВАН</a
@@ -94,60 +94,114 @@
       <div class="method-grp__container">
         <h3 class="method-grp__title">Мониторинг СЭТ на малых площадях</h3>
         <p class="method-grp__text">
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Sint,
-          aliquid. Laboriosam nihil culpa quod, quidem at aliquid esse ea beatae
-          illo facere omnis harum cupiditate nisi quibusdam officiis ullam iusto
-          assumenda sequi nobis quaerat! Natus deserunt exercitationem neque non
-          repudiandae corrupti perspiciatis nisi cumque laborum illo, earum
-          quasi beatae rem, unde architecto totam aliquid ipsum velit culpa,
-          excepturi ratione reiciendis? Minus eaque sed quia! Dolor maxime saepe
-          magni autem libero corporis nulla consequatur accusamus sint sed, vel
-          at blanditiis quaerat adipisci iusto rerum officiis quisquam. Alias
-          sequi, voluptatibus iure molestiae ducimus ea veniam asperiores
-          provident, tenetur odio quaerat ipsum. Necessitatibus totam id ipsum
-          blanditiis modi unde quod! Impedit quis laudantium, odio ad natus
-          voluptatibus quos cum. Quisquam pariatur voluptatum, unde optio
-          exercitationem ipsum voluptatem illum sit nostrum, minima quis
-          aperiam! Omnis nobis fugiat dolores molestias aperiam cupiditate
-          possimus sequi quis non totam magni numquam reprehenderit maxime,
-          laudantium praesentium porro accusamus!
+          Мониторинг СЭТ или мониторинг сейсмической эмиссионной томографии,
+          обеспечивая локализацию глубинных источников когерентного
+          сейсмического излучения, является эффективным и практически удобным
+          инструментом для мониторинга динамического состояния среды и выявления
+          глубинных локальных структур.
+        </p>
+        <p class="method-grp__text">
+          Эффект существования сейсмической эмиссии был открыт в 1975 г.
+          Рыкуновым Л.H., Хаврошкиным О.Б. и Цыплаковым В.В и зарегистрирован
+          как открытие в 1983 г.
+        </p>
+        <p class="method-grp__text">
+          Физической основой метода является экспериментально обнаруженный факт
+          существования сейсмического отклика энергонасыщенной геосреды –
+          существование областей слабого сейсмического излучения,
+          активизирующихся при деформационных природных и техногенных
+          воздействиях. Это раздробленные, трещиноватые зоны, разломы и большие
+          трещины, каналы фильтрации флюида, пульсирующие скопления попутного
+          газа, области концентрации напряжений и сильных термических градиентов
+          и пр. Механизмы сейсмической эмиссии традиционно связывают с
+          процессами разрушения, трения по границам блоков, трансформации
+          излучения в областях сильной акустической нелинейности.
         </p>
         <div class="method-grp__image-wrapper">
-          <img src="img/grp-method__1.png" alt="" />
-          <img src="img/grp-method__2.png" alt="" />
+          <video
+            src="img/method-grp__gif.mp4"
+            autoplay
+            loop
+            poster="https://gfycat.com/ru/alarmingnaturalbluemorphobutterfly"
+            width="500"
+            height="300"
+          ></video>
         </div>
-        <span class="method-grp__comment">Lorem15</span>
         <p class="method-grp__text">
-          Природа микросейсм разнообразна, но в их составе имеются
-          <a
-            class="method-grp__link"
-            target="_blank"
-            href="https://ru.wikipedia.org/wiki/%D0%A1%D1%82%D0%BE%D1%8F%D1%87%D0%B0%D1%8F_%D0%B2%D0%BE%D0%BB%D0%BD%D0%B0"
-            >lorm</a
-          >
-          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Doloribus
-          deserunt dignissimos deleniti, laborum facilis impedit?
+          При практической реализации метода эмиссионной томографии регистрация
+          волнового сейсмического поля проводится с помощью площадной группы
+          высокочувствительных сейсмических регистраторов, расположенных на
+          поверхности или с небольшим заглублением.
+          <br />
+          <br />
+          Регистрирующая система может быть стационарной, либо, при
+          необходимости локального временного мониторинга в пределах большой
+          площади, может быть реализована в мобильном варианте с передвижной или
+          стационарной базой сбора и обработки информации. Система передачи
+          данных на центр сбора данных может предусматривать возможность
+          беспроводного обмена информацией (радио– и спутниковая связь), а также
+          осуществляться по электрическим или оптоволоконным кабелям.
         </p>
         <div class="method-grp__image-wrapper">
-          <img class="method-grp__gif" src="img/Standing_wave_2.gif" alt="" />
+          <img src="img/method-grp__image.png" alt="" />
         </div>
-        <span class="method-grp__comment"
-          >Пример стоячей волны (черная линия)</span
-        >
         <p class="method-grp__text">
-          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Doloribus
-          deserunt dignissimos deleniti, laborum facilis impedit?
+          При разработке нефтяных и газовых месторождений сильные изменения
+          напряженного состояния среды при интенсивном отборе нефти и газа, в
+          процессе формирования трещины гидроразрыва приводят к сейсмическому
+          когерентному эмиссионному излучению из областей структурных дефектов и
+          концентрации напряжений. Когерентный эмиссионный сейсмический сигнал
+          порождается в процессе циркуляции флюида по каналам фильтрации и
+          пульсаций скоплений попутного газа. В результате компьютерной
+          обработки получается трехмерное изображение источников излучения в
+          виде «облака», заполняющего излучающую область среды.
+        </p>
+
+        <p class="method-grp__text">
+          Принимая во внимание, что слоистая геологическая среда не является
+          изотропной как по вертикали, так и по горизонтали и неоднократно
+          испытывала тектонические движения в процессе геологического прошлого,
+          можно с уверенностью утверждать о присутствии в массиве горных пород
+          естественной трещиноватости.
+          <br />
+          <br />
+          Последняя представляет собой результат разрушения и деформации
+          (смещение по плоскостям трещин) и выражена разнонаправленными
+          системами трещин с разной интенсивностью (плотностью, частотой,
+          длинной и т.п.) в зависимости от множества факторов (литологический
+          состав, вторичные изменения, мощность слоя, перемещения углеводородов
+          и т.д.).
+          <br />
+          <br />
+
+          Так как естественная трещиноватость оказывает существенное влияние на
+          флюидодинамический режим разработки месторождения и
+          напряженно-деформированное состояние массива горных пород, результаты
+          мониторнига САТ позволяют создавать объективную модель сети дискретных
+          трещин (DFN), необходимую для гидродинамического и геомеханического
+          моделирования.
+          <br />
+          <br />
         </p>
 
         <ul class="method-grp__list">
           <h4 class="method-grp__list-title">Решаемые задачи</h4>
+          <li class="method-grp__item">мониторинг состояния пласта;</li>
           <li class="method-grp__item">
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Doloribus
-            deserunt dignissimos deleniti, laborum facilis impedit?
+            контроль продвижения потоков отбираемых углеводородов;
           </li>
           <li class="method-grp__item">
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Doloribus
-            deserunt dignissimos deleniti, laborum facilis impedit?
+            контроль продвижения фронта закачиваемого флюида;
+          </li>
+          <li class="method-grp__item">
+            оценка эффективности воздействия с целью интенсификации добычи нефти
+            и газа;
+          </li>
+          <li class="method-grp__item">
+            контроль возникновения аварийных ситуаций,
+          </li>
+          <li class="method-grp__item">
+            изучение систем естественной трещиноватости.
           </li>
         </ul>
 
@@ -155,113 +209,113 @@
           <h4 class="method-grp__list-title">Результаты</h4>
           <div class="swiper-container">
             <!-- Additional required wrapper -->
-            <!-- <div class="swiper-wrapper method-grp__wrapper">
-               Slides
-              <div class="swiper-slide method-grp__slide">
-                <div class="method-grp__images">
-                  <img
-                    class="method-grp__image"
-                    src="img/grp-method__swiper-L.png"
-                    alt=""
-                  />
-                </div>
-                <div class="method-grp__text-wrapper">
-                  <h4 class="method-grp__text-title">
-                    Карта энергии микросейсмического волнового поля для пласта L
-                  </h4>
-                  <p class="method-grp__description">
-                    На карте распределения энергий по пласту L центральная часть
-                    Южно-Дагинской локальной тектонической зоны соответствует
-                    повышенным значениям энергий. Данная зона располагается в
-                    области между разломами 3, 4 и 6 северо-восточного
-                    простирания. В пределах максимальных значений находятся
-                    продуктивные скв. SD4 и SD12, в которых при опробовании
-                    пластов получены притоки УВ. В юго-восточной части
-                    месторождения повышенные значения энергий в антиклинальной
-                    тектонической Катанглийской зоне делится 11 разрывным
-                    нарушением на две части. Западная часть соответствует залежи
-                    Е.
-                  </p>
-                </div>
-              </div>
-              <div class="swiper-slide method-grp__slide">
-                <div class="method-grp__images">
-                  <img
-                    class="method-grp__image"
-                    src="img/grp-method__swiper-III.png"
-                    alt=""
-                  />
-                </div>
-                <div class="method-grp__text-wrapper">
-                  <h4 class="method-grp__text-title">
-                    Карта энергии микросейсмического волнового поля для пласта
-                    III, IV
-                  </h4>
-                  <p class="method-grp__description">
-                    Пласт III вскрыт всеми скважинами, кроме скважины SD 5, в
-                    которой он выпадает из разреза за счет тектонического
-                    нарушения. В центральной части Южно-Дагинской тектонической
-                    локальной зоны, на карте распределения энергий по пласту III
-                    наблюдаются повышенные значения, что коррелируется с
-                    нефтеносностью по скв SD4.
-                  </p>
-                </div>
-              </div>
-              <div class="swiper-slide method-grp__slide">
-                <div class="method-grp__images">
-                  <img
-                    class="method-grp__image"
-                    src="img/grp-method__swiper-XI.png"
-                    alt=""
-                  />
-                </div>
-                <div class="method-grp__text-wrapper">
-                  <h4 class="method-grp__text-title">
-                    Карта энергии микросейсмического волнового поля для пласта
-                    XI, XII
-                  </h4>
-                  <p class="method-grp__description">
-                    Распределение значений энергий по пласту XI носит
-                    дифференцированный характер – выделяются две области
-                    повышенных и пониженных значений энергий. Зона повышенных
-                    значений имеет неправильную форму и располагается в
-                    центральной и южной части участка исследований МСИ.
-                  </p>
-                </div>
-              </div>
-              <div class="swiper-slide method-grp__slide">
-                <div class="method-grp__images">
-                  <img
-                    class="method-grp__image"
-                    src="img/grp-method__swiper-XXIII.png"
-                    alt=""
-                  />
-                </div>
-                <div class="method-grp__text-wrapper">
-                  <h4 class="method-grp__text-title">
-                    Карта энергии микросейсмического волнового поля для пластов
-                    XXIII, XXIV
-                  </h4>
-                  <p class="method-grp__description">
-                    Распределение значений энергий по пласту XXIII
-                    неравномерное. Достаточно контрастно выделяются две зоны –
-                    локальные области повышенных значений энергий,
-                    располагающиеся в центральной и южной частях участка работ
-                    МСИ.
-                  </p>
-                </div>
-              </div>
-            </div> -->
+            <div class="swiper-wrapper method-grp__wrapper">
+              <!-- Slides -->
 
-            <!-- If we need navigation buttons -->
-            <!-- <div class="swiper-button-prev"></div>
-            <div class="swiper-button-next"></div> -->
+              <div class="swiper-slide method-grp__slide">
+                <div class="method-grp__images">
+                  <img
+                    class="method-grp__image"
+                    src="img/grp-method__swiper-1.png"
+                    alt=""
+                  />
+                </div>
+                <div class="method-grp__text-wrapper">
+                  <h4 class="method-grp__text-title">
+                    Микросейсмические события для основного ГРП
+                  </h4>
+                  <p class="method-grp__description">
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                    Autem vitae consequuntur, dolorum, est distinctio
+                    accusantium voluptas neque quas quae alias magni odio
+                    corporis at delectus hic dolores repellat, ab voluptate
+                    explicabo recusandae! Reiciendis id sequi recusandae beatae
+                    nesciunt quis rem aut velit voluptatem veniam ab nemo quod,
+                    fugit impedit inventore!
+                  </p>
+                </div>
+              </div>
+              <div class="swiper-slide method-grp__slide">
+                <div class="method-grp__images">
+                  <img
+                    class="method-grp__image"
+                    src="img/grp-method__swiper-2.png"
+                    alt=""
+                  />
+                </div>
+                <div class="method-grp__text-wrapper">
+                  <h4 class="method-grp__text-title">
+                    Микросейсмические события для основного ГРП
+                  </h4>
+                  <p class="method-grp__description">
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                    Autem vitae consequuntur, dolorum, est distinctio
+                    accusantium voluptas neque quas quae alias magni odio
+                    corporis at delectus hic dolores repellat, ab voluptate
+                    explicabo recusandae! Reiciendis id sequi recusandae beatae
+                    nesciunt quis rem aut velit voluptatem veniam ab nemo quod,
+                    fugit impedit inventore!
+                  </p>
+                </div>
+              </div>
+              <div class="swiper-slide method-grp__slide">
+                <div class="method-grp__images">
+                  <img
+                    class="method-grp__image"
+                    src="img/grp-method__swiper-3.png"
+                    alt=""
+                  />
+                </div>
+                <div class="method-grp__text-wrapper">
+                  <h4 class="method-grp__text-title">
+                    Микросейсмические события для основного ГРП
+                  </h4>
+                  <p class="method-grp__description">
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                    Autem vitae consequuntur, dolorum, est distinctio
+                    accusantium voluptas neque quas quae alias magni odio
+                    corporis at delectus hic dolores repellat, ab voluptate
+                    explicabo recusandae! Reiciendis id sequi recusandae beatae
+                    nesciunt quis rem aut velit voluptatem veniam ab nemo quod,
+                    fugit impedit inventore!
+                  </p>
+                </div>
+              </div>
+              <div class="swiper-slide method-grp__slide">
+                <div class="method-grp__images">
+                  <img
+                    class="method-grp__image"
+                    src="img/grp-method__swiper-4.png"
+                    alt=""
+                  />
+                </div>
+                <div class="method-grp__text-wrapper">
+                  <h4 class="method-grp__text-title">
+                    Выделение естественной трещиноватости по результатам
+                    мониторинга САТ
+                  </h4>
+                  <p class="method-grp__description">
+                    В процессе формирования трещины ГРП происходит конкурентная
+                    активация существующих систем естественных трещин.
+                    Увеличение объема закачки приводит к большему
+                    пространственному охвату области реактивации существующих
+                    трещин. На основе концепции критически напряженного
+                    состояния массива горных пород была проведена схематизация
+                    сети естественной трещиноватости. Выделенные трещины могут
+                    быть сгруппированы в следующие системы трещин, с условной
+                    кинематикой:
+                  </p>
+                </div>
+              </div>
+            </div>
+
+            <!-- If we need pagination -->
+            <div class="swiper-pagination"></div>
           </div>
         </div>
       </div>
-
-      <!-- Slider main container -->
     </section>
+    <!-- .method-grp -->
 
     <footer class="footer">
       <div class="footer-container">
