--- a/method-svan.html
+++ b/method-svan.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Метод СВАН</title>
+    <title>Мониторинг СВАН</title>
     <link rel="preconnect" href="https://fonts.gstatic.com" />
     <link
       href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700&display=swap"
@@ -50,7 +50,7 @@
                   >Мониторинг СЭТ на малых площадях</a
                 >
                 <a href="method-nat.html" class="dropdown__link"
-                  >Мониторинг естественной трещиноватости</a
+                  >Мониторинг заводнения</a
                 >
                 <a href="method-svan.html" class="dropdown__link"
                   >Мониторинг СВАН</a
@@ -92,9 +92,9 @@
 
     <section class="method-msi">
       <div class="method-msi__container">
-        <h3 class="method-msi__title">Метод СВАН</h3>
+        <h3 class="method-msi__title">Мониторинг СВАН</h3>
         <p class="method-msi__text">
-          Технология микросейсмических исследований (МСИ) является
+          Технология сейсмического волнового анализа (СВАН) является
           разновидностью пассивной сейсморазведки, в зарубежной литературе она
           описывается как Low Frequency Passive Seismic Technology. Последняя,
           как метод геофизического исследования, зародилась относительно
