--- a/method-nat.html
+++ b/method-nat.html
@@ -50,7 +50,7 @@
                   >Мониторинг СЭТ на малых площадях</a
                 >
                 <a href="method-nat.html" class="dropdown__link"
-                  >Мониторинг естественной трещиноватости</a
+                  >Мониторинг заводнения</a
                 >
                 <a href="method-svan.html" class="dropdown__link"
                   >Мониторинг СВАН</a
