--- a/index.html
+++ b/index.html
@@ -115,8 +115,8 @@
     </section>
     <!--.about-->
 
-    <section class="subscribe" id="contacts">
-      <div class="subscribe-container">
+    <section class="subscribe" id="scene">
+      <div class="subscribe-container" data-depth="0.2">
         <h3 class="subscribe__title">Мы всегда открыты к сотрудничеству!</h3>
         <a href="contacts.html" class="about__button">Связаться с нами</a>
       </div>
@@ -446,6 +446,7 @@
     <script src="js/swiper-bundle.min.js "></script>
     <script src="js/jquery-3.5.1.min.js "></script>
     <!-- <script src="js/second.js "></script> -->
+    <script src="js/parallax.js"></script>
     <script src="js/main.js "></script>
   </body>
 </html>
