fixed: fixed everything

--- a/about-company.html
+++ b/about-company.html
@@ -121,11 +121,11 @@
             Сибирь, Тимано-Печорская и Волго-Уральская провинции) и на острове
             Сахалин. <br />
             <br />
-            Компания является системообразующим предприятием для геологической
+            <!-- Компания является системообразующим предприятием для геологической
             отрасли России и вносит значительный вклад в реализацию
             государственной программы по воспроизводству минерально-сырьевой
-            базы России в нефтегазовом секторе. <br />
-            <br />
+            базы России в нефтегазовом секторе. <br /> -->
+
             Заказчиками СИГМЫ являются: ПАО «Газпром», ПАО «Газпром нефть», ООО
             "ЛУКОЙЛ-Коми", ПАО «ЛУКОЙЛ», ООО «РЕЗОНАНС», ООО «Байтекс», ООО
             «Газпром добыча Ямбург », ООО "НПП Геодинамика" и другие.
