--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>ООО "СИГМА"- Микросейсмические исследования скважин</title>
+    <title>ООО "СИГМА"- Cейсмические исследования скважин</title>
     <link rel="preconnect" href="https://fonts.gstatic.com" />
     <link
       href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700&display=swap"
@@ -77,8 +77,7 @@
       <div class="hero-container">
         <div class="hero__wrapper">
           <h1 class="hero__title">
-            Микросейсмические исследования нефтегазоносности геологических
-            объектов
+            Сейсмический мониторинг нефтегазоности геологических объектов
           </h1>
           <span class="hero__span">Геофизическая компания, с 2014 года</span>
         </div>
