--- a/technologies.html
+++ b/technologies.html
@@ -127,6 +127,13 @@
             направлением в области геофизики и изучение недр. Нашей компанией
             был разработан автономный сейсмический комплекс, не уступающий по
             характеристикам современным зарубежным аналогам.
+            <br />
+            <br />
+            Все измерения производятся многофункциональными сейсмическими
+            комплексами, представляющими из себя сейсмоприёмник и 24-разрядный
+            измерительный модуль, которые обеспечивают высокую чувствительность
+            регистрации сейсмосигнала и его аналого-цифровое преобразование
+            независимыми АЦП по трем ортогональным координатам.
           </p>
           <div class="technologies__images-wrapper">
             <div class="technologies__image-wrapper">
@@ -157,38 +164,56 @@
             Обработка геофизических сигналов
           </h5>
           <p class="technologies__text">
-            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Aperiam,
-            error dolor consequuntur ullam eveniet recusandae hic fuga. Odit
-            dicta velit veritatis a eligendi culpa officiis quasi beatae,
-            dolorem at, quae cum corporis non esse. Neque adipisci praesentium,
-            culpa inventore vero blanditiis commodi in impedit possimus tempora?
-            Hic, dolore fugit, illo cumque deserunt quasi inventore incidunt
-            minus accusamus pariatur minima sunt iste iure. Quaerat quibusdam
-            labore veritatis voluptate distinctio enim excepturi a accusamus
-            modi provident. Esse tempora, voluptate ut doloremque odit optio id
-            nostrum nam rerum! Culpa nobis maiores, mollitia voluptate ducimus
-            consequatur voluptates corporis, magni sapiente, in dignissimos nemo
-            aperiam!
+            Для первичной обработки используется программный комплекс,
+            разработанный в ООО «СИГМА». Трехмерное плотностное моделирование
+            (решение прямой и обратной задачи) осуществляется программным
+            обеспечением «?????» (Golden Software). Фильтрация, обнаружение
+            слабых аномалий, классификация и распознавание комплексных аномалий,
+            2D и 3D моделирование, комплексирование с другими
+            геолого-геофизическими методами с использованием
+            вероятностно-статистического подхода производится при помощи
+            алгоритма, написанного ООО "СИГМА" на языке программирования Python.
           </p>
+
+          <div class="technologies__images-wrapper">
+            <div class="technologies__image-wrapper">
+              <img
+                class="technologies__image"
+                src="img/technologies_img-6.jpg"
+                alt=""
+              />
+            </div>
+            <div class="technologies__image-wrapper">
+              <img
+                class="technologies__image"
+                src="img/technologies_img-7.jpg"
+                alt=""
+              />
+            </div>
+          </div>
         </div>
         <div class="technologies__info">
           <h5 class="technologies__title--little">
             Геолого-геофизическая интерпретация
           </h5>
           <p class="technologies__text">
-            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Aperiam,
-            error dolor consequuntur ullam eveniet recusandae hic fuga. Odit
-            dicta velit veritatis a eligendi culpa officiis quasi beatae,
-            dolorem at, quae cum corporis non esse. Neque adipisci praesentium,
-            culpa inventore vero blanditiis commodi in impedit possimus tempora?
-            Hic, dolore fugit, illo cumque deserunt quasi inventore incidunt
-            minus accusamus pariatur minima sunt iste iure. Quaerat quibusdam
-            labore veritatis voluptate distinctio enim excepturi a accusamus
-            modi provident. Esse tempora, voluptate ut doloremque odit optio id
-            nostrum nam rerum! Culpa nobis maiores, mollitia voluptate ducimus
-            consequatur voluptates corporis, magni sapiente, in dignissimos nemo
-            aperiam!
+            Под геолого-геофизической интерпретацией геофизического материала
+            принимается решение обратной кинематической задачи с целью
+            формирования облака событий и анализ получившегося облака событий.
+            <br />
+            <br />
+            При работе используется итерационный метод численной нелинейной
+            оптимизации, являющимся разработкой компании, с использованием
+            распределенных параллельных вычислений.
+            <br /><br />
+            В результате получается множество решений, соответствующих
+            пространственной области микросейсмической активности, изменяющейся
+            по интенсивности и размеру во времени в процессе производства
+            геолого-технологического мероприятия.
           </p>
+          <div class="technologies__image-wrapper">
+            <img src="img/technologies__results.png" alt="" />
+          </div>
         </div>
       </div>
     </section>
