--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="format-detection" content="telephone=no" />
     <title>ООО "СИГМА"- Cейсмические исследования скважин</title>
     <link rel="preconnect" href="https://fonts.gstatic.com" />
     <link
@@ -77,7 +78,7 @@
       <div class="hero-container">
         <div class="hero__wrapper">
           <h1 class="hero__title">
-            Сейсмический мониторинг нефтегазоности геологических объектов
+            Сейсмический мониторинг нефтегазоносности геологических объектов
           </h1>
           <span class="hero__span">Геофизическая компания, с 2014 года</span>
         </div>
@@ -376,16 +377,18 @@
             <div class="footer__menu-group">
               <h3 class="footer__menu-title">Реквизиты</h3>
               <ul class="footer__list">
+                <li class="footer__item">ИНН: 1661040597</li>
+                <li class="footer__item">КПП: 166101001</li>
                 <li class="footer__item">
-                  ИНН: 1661040597 <br />
-                  КПП: 166101001 <br />
                   Расч.счет: 40702810362000003739 в отделении «Банк Татарстан»
-                  №8610 <br />
-                  БИК: 049205603 <br />
-                  Кор.счет: 30101810600000000603 в РКЦ НБ РТ г.Казани <br />
-                  ОГРН: 1141690034474 <br />
-                  ОКПО: 54445052
+                  №8610
                 </li>
+                <li class="footer__item">БИК: 049205603</li>
+                <li class="footer__item">
+                  Кор.счет: 30101810600000000603 в РКЦ НБ РТ г.Казани
+                </li>
+                <li class="footer__item">ОГРН: 1141690034474</li>
+                <li class="footer__item">ОКПО: 54445052</li>
               </ul>
             </div>
 
@@ -444,8 +447,6 @@
 
     <script src="js/swiper-bundle.min.js "></script>
     <script src="js/jquery-3.5.1.min.js "></script>
-    <!-- <script src="js/second.js "></script> -->
-    <script src="js/parallax.js"></script>
     <script src="js/main.js "></script>
   </body>
 </html>
