fixed: responsive for everything

--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
                 Quam, delectus a?
               </p>
 
-              <a class="methods__button" type="submit">Подробнее</a>
+              <a href="#" class="methods__button">Подробнее</a>
             </div>
           </div>
         </div>
@@ -440,8 +440,8 @@
       <nav class="mobile__nav">
         <a href="index.html " class="mobile__link">Главная</a>
         <a href="about-company.html " class="mobile__link">О компании</a>
-        <a href="# " class="mobile__link">Наши технологии</a>
-        <a href="# " class="mobile__link">Контакты</a>
+        <a href="technologies.html" class="mobile__link">Наши технологии</a>
+        <a href="contacts.html" class="mobile__link">Контакты</a>
       </nav>
     </div>
 
