--- a/method-grp_sat.html
+++ b/method-grp_sat.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-     <meta name="format-detection" content="telephone=no" />
+    <meta name="format-detection" content="telephone=no" />
     <title>Мониторинг СЭТ на малых площадях</title>
     <link rel="preconnect" href="https://fonts.gstatic.com" />
     <link
@@ -50,9 +50,9 @@
                 <a href="method-grp_sat.html" class="dropdown__link"
                   >Мониторинг СЭТ на малых площадях</a
                 >
-                <a href="method-nat.html" class="dropdown__link"
+                <!-- <a href="method-nat.html" class="dropdown__link"
                   >Мониторинг заводнения</a
-                >
+                > -->
                 <a href="method-svan.html" class="dropdown__link"
                   >Мониторинг СВАН</a
                 >
@@ -118,16 +118,9 @@
           процессами разрушения, трения по границам блоков, трансформации
           излучения в областях сильной акустической нелинейности.
         </p>
-        <div class="method-grp__image-wrapper">
-          <video
-            src="img/method-grp__gif.mp4"
-            autoplay
-            loop
-            poster="https://gfycat.com/ru/alarmingnaturalbluemorphobutterfly"
-            width="500"
-            height="300"
-          ></video>
-        </div>
+
+        <img class="method-grp__gif" src="img/method-grp__gif.gif" alt="" />
+
         <p class="method-grp__text">
           При практической реализации метода эмиссионной томографии регистрация
           волнового сейсмического поля проводится с помощью площадной группы
@@ -178,7 +171,7 @@
           Так как естественная трещиноватость оказывает существенное влияние на
           флюидодинамический режим разработки месторождения и
           напряженно-деформированное состояние массива горных пород, результаты
-          мониторнига САТ позволяют создавать объективную модель сети дискретных
+          мониторнига СЭТ позволяют создавать объективную модель сети дискретных
           трещин (DFN), необходимую для гидродинамического и геомеханического
           моделирования.
           <br />
@@ -208,7 +201,7 @@
 
         <div class="method-grp__results">
           <h4 class="method-grp__list-title">Результаты</h4>
-          <div class="swiper-container">
+          <div class="swiper-container grp-container">
             <!-- Additional required wrapper -->
             <div class="swiper-wrapper method-grp__wrapper">
               <!-- Slides -->
@@ -296,15 +289,13 @@
                     мониторинга САТ
                   </h4>
                   <p class="method-grp__description">
-                    В процессе формирования трещины ГРП происходит конкурентная
-                    активация существующих систем естественных трещин.
-                    Увеличение объема закачки приводит к большему
-                    пространственному охвату области реактивации существующих
-                    трещин. На основе концепции критически напряженного
-                    состояния массива горных пород была проведена схематизация
-                    сети естественной трещиноватости. Выделенные трещины могут
-                    быть сгруппированы в следующие системы трещин, с условной
-                    кинематикой:
+                    Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+                    Dolor qui nesciunt placeat iste illum, ea et similique
+                    architecto asperiores! Voluptates reprehenderit magni est
+                    nostrum impedit totam error repellendus voluptatem placeat
+                    quidem veritatis voluptas vel doloremque vero ex officia,
+                    qui facilis asperiores laudantium! Veniam maxime molestiae
+                    cupiditate, asperiores consequatur quis veritatis!
                   </p>
                 </div>
               </div>
