--- a/technologies.html
+++ b/technologies.html
@@ -50,9 +50,9 @@
                 <a href="method-grp_sat.html" class="dropdown__link"
                   >Мониторинг СЭТ на малых площадях</a
                 >
-                <a href="method-nat.html" class="dropdown__link"
+                <!-- <a href="method-nat.html" class="dropdown__link"
                   >Мониторинг заводнения</a
-                >
+                > -->
                 <a href="method-svan.html" class="dropdown__link"
                   >Мониторинг СВАН</a
                 >
@@ -96,7 +96,7 @@
         <h3 class="technologies__title">Наши технологии</h3>
         <div class="technologies__main-wrapper">
           <img
-            class="technologies__image"
+            class="technologies__big-image"
             src="img/technologies_img-1.jpg"
             alt=""
           />
@@ -137,27 +137,23 @@
             независимыми АЦП по трем ортогональным координатам.
           </p>
           <div class="technologies__images-wrapper">
-            <div class="technologies__image-wrapper">
-              <img
-                class="technologies__image"
-                src="img/technologies_img-3.jpg"
-                alt=""
-              />
-            </div>
-            <div class="technologies__image-wrapper">
-              <img
-                class="technologies__image"
-                src="img/technologies_img-4.jpg"
-                alt=""
-              />
-            </div>
-            <div class="technologies__image-wrapper">
-              <img
-                class="technologies__image"
-                src="img/technologies_img-5.jpg"
-                alt=""
-              />
-            </div>
+            <img
+              class="technologies__image-field"
+              src="img/technologies_img-3.jpg"
+              alt=""
+            />
+
+            <img
+              class="technologies__image-field"
+              src="img/technologies_img-4.jpg"
+              alt=""
+            />
+
+            <img
+              class="technologies__image-field"
+              src="img/technologies_img-5.jpg"
+              alt=""
+            />
           </div>
         </div>
         <div class="technologies__info">
@@ -179,14 +175,14 @@
           <div class="technologies__images-wrapper">
             <div class="technologies__image-wrapper">
               <img
-                class="technologies__image"
+                class="technologies__image-signal"
                 src="img/technologies_img-6.jpg"
                 alt=""
               />
             </div>
             <div class="technologies__image-wrapper">
               <img
-                class="technologies__image"
+                class="technologies__image-signal"
                 src="img/technologies_img-7.jpg"
                 alt=""
               />
