--- a/thankyou.html
+++ b/thankyou.html
@@ -50,9 +50,9 @@
                 <a href="method-grp_sat.html" class="dropdown__link"
                   >Мониторинг СЭТ на малых площадях</a
                 >
-                <a href="method-nat.html" class="dropdown__link"
+                <!-- <a href="method-nat.html" class="dropdown__link"
                   >Мониторинг заводнения</a
-                >
+                > -->
                 <a href="method-svan.html" class="dropdown__link"
                   >Мониторинг СВАН</a
                 >
@@ -187,7 +187,7 @@
       <nav class="mobile__nav">
         <a href="index.html" class="mobile__link">Главная</a>
         <a href="about-company.html" class="mobile__link">О компании</a>
-        <a href="#" class="mobile__link">Наши технологии</a>
+        <a href="technologies.html" class="mobile__link">Наши технологии</a>
         <a href="contacts.html" class="mobile__link">Контакты</a>
       </nav>
     </div>
