--- a/index.html
+++ b/index.html
@@ -50,9 +50,9 @@
                 <a href="method-grp_sat.html" class="dropdown__link"
                   >Мониторинг СЭТ на малых площадях</a
                 >
-                <a href="method-nat.html" class="dropdown__link"
+                <!-- <a href="method-nat.html" class="dropdown__link"
                   >Мониторинг заводнения</a
-                >
+                > -->
                 <a href="method-svan.html" class="dropdown__link"
                   >Мониторинг СВАН</a
                 >
@@ -137,23 +137,24 @@
             </div>
             <div class="methods__text-wrapper">
               <h4 class="methods__text-title">
-                Мониторинг СЭТ на малых площадях
+                Мониторинг сейсмоэмиссионной томографии на малых площадях
               </h4>
               <p class="methods__text">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia
-                aperiam hic obcaecati quidem debitis magni fugiat provident
-                repellendus nisi doloribus animi qui ipsam, omnis, ullam
-                sapiente, quibusdam ducimus reiciendis asperiores odio? Dolores
-                repudiandae ratione consequatur tenetur error vero quo
-                asperiores fugiat corporis deleniti, dolorum eaque saepe quod.
-                Quam, delectus a?
+                Данная методика позволяет определить характер распространения
+                как техногенной трещиноватости, возникающей при проведении
+                гидроразрыва пласта (ГРП), так и проследить активацию
+                существующих систем естественных трещин. Получаемые результаты
+                дают информацию об эффективности проведенном ГРП - как глубоко
+                по латерали проник проппант в пласт, на сколько пласт охвачен
+                системой трещин; диагностике геолого-геофизического состояния
+                скважин — определение межпластовых перетоков и пр.
               </p>
               <a href="method-grp_sat.html" class="methods__button"
                 >Подробнее</a
               >
             </div>
           </div>
-          <div class="swiper-slide methods-slide">
+          <!-- <div class="swiper-slide methods-slide">
             <div class="methods__image-wrapper">
               <img class="methods__image" src="img/method-est.png" alt="" />
             </div>
@@ -172,7 +173,7 @@
               </p>
               <a href="#" class="methods__button">Подробнее</a>
             </div>
-          </div>
+          </div> -->
           <div class="swiper-slide methods-slide">
             <div class="methods__image-wrapper">
               <img class="methods__image" src="img/method-svan.png" alt="" />
@@ -180,16 +181,15 @@
             <div class="methods__text-wrapper">
               <h4 class="methods__text-title">Мониторинг СВАН</h4>
               <p class="methods__text">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia
-                aperiam hic obcaecati quidem debitis magni fugiat provident
-                repellendus nisi doloribus animi qui ipsam, omnis, ullam
-                sapiente, quibusdam ducimus reiciendis asperiores odio? Dolores
-                repudiandae ratione consequatur tenetur error vero quo
-                asperiores fugiat corporis deleniti, dolorum eaque saepe quod.
-                Quam, delectus a?
+                Спектрально-волновой анализ (СВАН) дает возможность оценки
+                положения внешнего контура ВНК, провести детализацию
+                геологического строения, а также пространственное распределение
+                фильтрационно-емкостных свойств продуктивных зон залежей.
+                Результат выполнения СВАН — оценка перспектив и целесообразности
+                бурения проектных скважин
               </p>
 
-              <a href="#" class="methods__button">Подробнее</a>
+              <a href="method-svan.html" class="methods__button">Подробнее</a>
             </div>
           </div>
         </div>
@@ -399,7 +399,7 @@
                   <div class="footer__item-wrapper">
                     <img src="img/map-icon.svg " class="footer__icon" alt=" " />
                   </div>
-                  ООО «СИГМА», а/я 26, 420073, г. Казань, ул. Аделя Кутуя, д.46
+                  ООО «СИГМА», 420073, г. Казань, ул. Аделя Кутуя, д.46
                 </li>
                 <li class="footer__item">
                   <div class="footer__item-wrapper">
@@ -447,6 +447,7 @@
 
     <script src="js/swiper-bundle.min.js "></script>
     <script src="js/jquery-3.5.1.min.js "></script>
+    <script src="js/jquery.validate.min.js "></script>
     <script src="js/main.js "></script>
   </body>
 </html>
