--- a/method-nat.html
+++ b/method-nat.html
@@ -50,9 +50,9 @@
                 <a href="method-grp_sat.html" class="dropdown__link"
                   >Мониторинг СЭТ на малых площадях</a
                 >
-                <a href="method-nat.html" class="dropdown__link"
+                <!-- <a href="method-nat.html" class="dropdown__link"
                   >Мониторинг заводнения</a
-                >
+                > -->
                 <a href="method-svan.html" class="dropdown__link"
                   >Мониторинг СВАН</a
                 >
